# CMake

./: README.md
ex4/: CMakeLists.txt
ex5/: CMakeLists.txt
ex6/: CMakeLists.txt
ex8/prog1/: CMakeLists.txt
ex8/prog2/: CMakeLists.txt  main.cpp
